jpa and Oauth2.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 spring.application.name=InventoryManagementSystem
 server.port=8090
-#spring.oracle.console.enabled=true
+
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xepdb1
 spring.datasource.username=EmployeeManagementSystemUsingSpringBoot
 spring.datasource.password=Employee12
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.show_sql=true
-#spring.jpa.hibernate.generate_statistics=true
-#entitymanager.packagesToScan: org
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.security.oauth2.client.registration.google.client-id=964397597901-390c598hckpt9qnmf21mdee3p01r71ge.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid, profile, email
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8090/login/oauth2/code/google
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+logging.level.org.springframework.security=DEBUG
+spring.jpa.open-in-view=false
