--- a/InventoryManagementSystemImpl/src/main/resources/application.properties
+++ b/InventoryManagementSystemImpl/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-logging.level.org.springdoc=DEBUG
+#springdoc.api-docs.path=/v3/api-docs
+#springdoc.swagger-ui.path=/swagger-ui.html
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
